--- a/pom.xml
+++ b/pom.xml
@@ -494,6 +494,14 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>13</source>
+          <target>13</target>
+        </configuration>
+      </plugin>
 
       <!--region SpotBugs. Actually, JDK13 enable-preview is not supported :( -->
       <!--<plugin>-->
