Execution after build

--- a/intro/pom.xml
+++ b/intro/pom.xml
@@ -13,4 +13,10 @@
     <assembly.skipAssembly>false</assembly.skipAssembly>
   </properties>
 
+  <build>
+
+    <defaultGoal>verify exec:exec</defaultGoal>
+
+  </build>
+
 </project>
