--- a/oop/pom.xml
+++ b/oop/pom.xml
@@ -15,6 +15,16 @@
   <build>
 
     <defaultGoal>verify exec:exec</defaultGoal>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>12</source>
+          <target>12</target>
+        </configuration>
+      </plugin>
+    </plugins>
 
   </build>
 </project>
