task1.1 start cmd

--- a/pom.xml
+++ b/pom.xml
@@ -550,6 +550,14 @@
           <target>12</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>12</source>
+          <target>12</target>
+        </configuration>
+      </plugin>
 
       <!--region SpotBugs. Actually, JDK13 enable-preview is not supported :( -->
       <!--<plugin>-->
