--- a/oop/pom.xml
+++ b/oop/pom.xml
@@ -2,15 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.epam.courses.java.fundamentals</groupId>
-    <artifactId>java-fundamentals</artifactId>
-    <version>${revision}</version>
-  </parent>
+  <groupId>com.epam.courses.java.fundamentals</groupId>
+  <artifactId>java-fundamentals</artifactId>
+  <version>${revision}</version>
+</parent>
+
   <artifactId>oop</artifactId>
+
   <properties>
     <maven-assembly-plugin.mainClass>com.epam.courses.java.fundamentals.oop.demo.First</maven-assembly-plugin.mainClass>
     <assembly.skipAssembly>false</assembly.skipAssembly>
   </properties>
+
+  <dependencies>
+
+
+
+  </dependencies>
 
   <build>
 
