--- a/io/pom.xml
+++ b/io/pom.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.epam.courses.java.fundamentals</groupId>
-    <artifactId>java-fundamentals</artifactId>
-    <version>${revision}</version>
-  </parent>
-  <artifactId>io</artifactId>
-  <properties>
-    <!--<maven-assembly-plugin.mainClass>ru.vlapin.courses.java.fundamentals.intro.Hello</maven-assembly-plugin.mainClass>-->
-    <!--<assembly.skipAssembly>false</assembly.skipAssembly>-->
-  </properties>
+    <artifactId>io</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+
+    
 </project>
