--- a/oop/pom.xml
+++ b/oop/pom.xml
@@ -1,34 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>13</source>
-          <target>13</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <groupId>org.apache.maven.plugins</groupId>
-        <configuration>
-          <source>13</source>
-          <target>13</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
   <parent>
-    <groupId>com.epam.courses.java.fundamentals</groupId>
-    <artifactId>java-fundamentals</artifactId>
-    <version>${revision}</version>
-  </parent>
+  <groupId>com.epam.courses.java.fundamentals</groupId>
+  <artifactId>java-fundamentals</artifactId>
+  <version>${revision}</version>
+</parent>
+
   <artifactId>oop</artifactId>
+
   <properties>
-    <!--<maven-assembly-plugin.mainClass>ru.vlapin.courses.java.fundamentals.intro.Hello</maven-assembly-plugin.mainClass>-->
-    <!--<assembly.skipAssembly>false</assembly.skipAssembly>-->
+    <maven-assembly-plugin.mainClass>com.epam.courses.java.fundamentals.oop.demo.First</maven-assembly-plugin.mainClass>
+    <assembly.skipAssembly>false</assembly.skipAssembly>
   </properties>
+
+  <dependencies>
+
+
+
+  </dependencies>
+
+  <build>
+
+    <defaultGoal>verify exec:exec</defaultGoal>
+
+  </build>
 </project>
