--- a/strings/pom.xml
+++ b/strings/pom.xml
@@ -6,17 +6,9 @@
     <artifactId>java-fundamentals</artifactId>
     <version>${revision}</version>
   </parent>
-  <artifactId>intro</artifactId>
-
+  <artifactId>strings</artifactId>
   <properties>
-    <maven-assembly-plugin.mainClass>com.epam.courses.java.fundamentals.intro.demo.Hello</maven-assembly-plugin.mainClass>
-    <assembly.skipAssembly>false</assembly.skipAssembly>
+    <!--<maven-assembly-plugin.mainClass>ru.vlapin.courses.java.fundamentals.intro.Hello</maven-assembly-plugin.mainClass>-->
+    <!--<assembly.skipAssembly>false</assembly.skipAssembly>-->
   </properties>
-
-  <build>
-
-    <defaultGoal>verify exec:exec</defaultGoal>
-
-  </build>
-
 </project>
