--- a/intro/pom.xml
+++ b/intro/pom.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
+  <dependencies>
+    <dependency>
+      <groupId>com.epam.courses.java.fundamentals</groupId>
+      <artifactId>java-fundamentals</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
   <parent>
     <groupId>com.epam.courses.java.fundamentals</groupId>
     <artifactId>java-fundamentals</artifactId>
