--- a/commons/Makefile
+++ b/commons/Makefile
@@ -1,5 +1,5 @@
 # Module Artifact id
-A=`cat pom.xml | xml sel -N pom=http://maven.apache.org/POM/4.0.0 -t -v /pom:project/pom:artifactId`
+A=`cat pom.xml | xml sel -N pom=http://maven.apache.org/POM/4.0.0 -t -v /pom:project/`
 
 # Module Version
 V=`cat ../pom.xml | xml sel -N pom=http://maven.apache.org/POM/4.0.0 -t -v /pom:project/pom:properties/pom:revision`
