--- a/strings/pom.xml
+++ b/strings/pom.xml
@@ -11,4 +11,15 @@
     <!--<maven-assembly-plugin.mainClass>ru.vlapin.courses.java.fundamentals.intro.Hello</maven-assembly-plugin.mainClass>-->
     <!--<assembly.skipAssembly>false</assembly.skipAssembly>-->
   </properties>
+
+  <dependencies>
+
+    <dependency>
+      <groupId>com.epam.courses.java.fundamentals</groupId>
+      <artifactId>oop</artifactId>
+      <version>${revision}</version>
+    </dependency>
+
+  </dependencies>
+
 </project>
