--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>io</module>
   <module>threads</module>
     <module>jdbc</module>
+    <module>collections</module>
   </modules>
 
   <developers>
