--- a/exeptions/pom.xml
+++ b/exeptions/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>collections</artifactId>
+  <artifactId>exeptions</artifactId>
 
 
 </project>
