tasks from threads and exceptions

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <module>threads</module>
     <module>jdbc</module>
     <module>collections</module>
+    <module>exceptions</module>
   </modules>
 
   <developers>
