--- a/web/pom.xml
+++ b/web/pom.xml
@@ -69,6 +69,24 @@
   <build>
 
     <defaultGoal>verify</defaultGoal>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>13</source>
+                  <target>13</target>
+              </configuration>
+          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>13</source>
+                  <target>13</target>
+              </configuration>
+          </plugin>
+      </plugins>
 
   </build>
 </project>
