--- a/lombok.config
+++ b/lombok.config
@@ -1,4 +1,5 @@
 config.stopBubbling = true
+lombok.equalsandhashcode.callsuper = CALL
 lombok.accessors.chain = true
 lombok.fieldDefaults.defaultPrivate = true
 lombok.fieldDefaults.defaultFinal = true
