--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -6,5 +6,13 @@
   version="4.0"
   metadata-complete="false">
 
-
+  <!--<servlet>-->
+  <!--  <servlet-name>kjhdgf</servlet-name>-->
+  <!--  <servlet-class>com.epam.courses.java.fundamentals.web.HelloController</servlet-class>-->
+  <!--</servlet>-->
+  <!---->
+  <!--<servlet-mapping>-->
+  <!--  <servlet-name>kjhdgf</servlet-name>-->
+  <!--  <url-pattern>/hello</url-pattern>-->
+  <!--</servlet-mapping>-->
 </web-app>
